--- a/public/index.html
+++ b/public/index.html
@@ -30,20 +30,15 @@
 								<li>
 									<a href="#">Dropdown</a>
 									<ul>
-										<li><a href="#">Lorem dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam sed tempus</a></li>
+										<li><a href="#">Link to something</a></li>
+										<li><a href="#">Dropdown demo</a></li>
 										<li>
 											<a href="#">Submenu</a>
 											<ul>
-												<li><a href="#">Lorem dolor</a></li>
-												<li><a href="#">Phasellus magna</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam nisl</a></li>
-												<li><a href="#">Veroeros feugiat</a></li>
+												<li><a href="#">more links</a></li>
+												<li><a href="#">more links</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
 									</ul>
 								</li>
 								<li><a href="about.html">About Us</a></li>
@@ -116,31 +111,28 @@
 					<div class="container">
 						<header class="major">
 							<h2>Welcome To Pentium Ministries</h2>
-							<p>Insert Slogan Here</p>
+							<p>What To Expect</p>
 						</header>
 
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-											consequat etiam lorem ipsum dolor sit amet nullam.</p>
+						<p>
 
-											<h3>And Yet Another Subheading</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-											justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-											ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-											vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-											Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-											rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-											Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-											Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
+We care about you, not what you’re wearing. We don’t care who you’re voting for in the next election or how many tattoos you have. We’re a church full of imperfect, broken people who are coming to know Jesus and serving others together, and regardless of your story, we believe you belong!
 
-											<p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
-											quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
-											Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-											fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-											Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-											Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.</p>
-					</div>
+Rather than being a place where people far from God are met with shame, guilt, and condemnation, Jesus leads us to be a family that extends His grace, mercy, and forgiveness to everyone. No matter what you’ve been through or what questions you might have, we want you to be a part of the family.
+
+If you’ve never been and you’re considering coming, here’s what you should expect…
+<ul>
+<li>
+Nice people. We LOVE it when someone comes for the first time. But, we don’t always recognize the first-time visitors because so many of the people who come are still fairly new, so feel free to say, “This is my first time” and we’ll guide you in!
+A casual atmosphere. We care about YOU, not what you’re wearing, so feel to come in jeans or whatever is comfortable. Our dress code is simple: wear something. Grab a hot cup of free coffee from our Cafe and sit wherever you’d like! We will NOT single you out publicly or ask you to say anything, and we do NOT expect guests to contribute anything financially.
+</li>
+<li>
+A fun, safe environment for kids. Kids love it at Grace Hills! If you bring your kids, you’ll check them in and out each Sunday in our Check-In room using a special labeling system and our security volunteers will monitor the halls during the service. Babies and toddlers are cared for by loving volunteers. There’s a preschool room and Kids’ Church for grades one through five. All of our kids ministry volunteers must pass background checks and have a heart for kids and families.
+</li>
+<li>
+Practical teaching that connects the words of the Bible to everyday life and music that is lively, including drums and guitars. Don’t be surprised when some people raise their hands as a sign of praise while singing, and don’t feel obligated to do so yourself. We create an atmosphere of freedom in our services.</p>
+</li>
+</ul>					</div>
 				</section>
 
 			<!-- Posts -->
@@ -152,7 +144,7 @@
 									<a href="#" class="image left"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="inner">
 										<h3>The First Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<p>More information about ministry and links to important things</p>
 									</div>
 								</div>
 							</section>
@@ -161,7 +153,7 @@
 									<a href="#" class="image left"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="inner">
 										<h3>The Second Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<p>More information about ministry and links to important things</p>
 									</div>
 								</div>
 							</section>
@@ -172,7 +164,7 @@
 									<a href="#" class="image left"><img src="images/pic03.jpg" alt="" /></a>
 									<div class="inner">
 										<h3>The Third Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<p>More information about ministry and links to important things</p>
 									</div>
 								</div>
 							</section>
@@ -181,7 +173,7 @@
 									<a href="#" class="image left"><img src="images/pic04.jpg" alt="" /></a>
 									<div class="inner">
 										<h3>The Fourth Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<p>More information about ministry and links to important things</p>
 									</div>
 								</div>
 							</section>
@@ -204,28 +196,37 @@
 					<div class="container">
 						<div class="row">
 							<section class="col-3 col-6-narrower col-12-mobilep">
-								<h3>Links to Stuff</h3>
+
 								<ul class="links">
-									<li><a href="#">Mattis et quis rutrum</a></li>
-									<li><a href="#">Suspendisse amet varius</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan dolor</a></li>
-									<li><a href="#">Mattis rutrum accumsan</a></li>
-									<li><a href="#">Suspendisse varius nibh</a></li>
-									<li><a href="#">Sed et dapibus mattis</a></li>
-								</ul>
+												<li class="icon fa-home">
+													1234 Somewhere Road<br />
+													Nashville, TN 00000<br />
+													USA
+												</li>
+												<li class="icon fa-phone">
+													(000) 000-0000
+												</li>
+												<li class="icon fa-envelope">
+													<a href="#">info@untitled.tld</a>
+												</li>
+											</ul>
 							</section>
 							<section class="col-3 col-6-narrower col-12-mobilep">
-								<h3>More Links to Stuff</h3>
+
 								<ul class="links">
-									<li><a href="#">Duis neque nisi dapibus</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan sed</a></li>
-									<li><a href="#">Mattis et sed accumsan</a></li>
-									<li><a href="#">Duis neque nisi sed</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum amet varius</a></li>
-								</ul>
+												<li class="icon fa-twitter">
+													<a href="#">@untitled</a>
+												</li>
+												<li class="icon fa-instagram">
+													<a href="#">instagram.com/untitled</a>
+												</li>
+												<li class="icon fa-dribbble">
+													<a href="#">dribbble.com/untitled</a>
+												</li>
+												<li class="icon fa-facebook">
+													<a href="#">facebook.com/untitled</a>
+												</li>
+											</ul>
 							</section>
 							<section class="col-6 col-12-narrower">
 								<h3>Get In Touch</h3>
