--- a/public/events.html
+++ b/public/events.html
@@ -57,24 +57,22 @@
 									<!-- Sidebar 1 -->
 
 										<section>
-											<h3>Just a Subheading</h3>
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis et nisi etiam.</p>
+											<h3>Upcoming Event</h3>
+											<p>Description of upcoming event</p>
 											<footer>
 												<a href="#" class="button">Continue Reading</a>
 											</footer>
 										</section>
 
 										<section>
-											<h3>Another Subheading</h3>
+											<h3>More Upcoming Events</h3>
 											<ul class="links">
-												<li><a href="#">Amet turpis, feugiat sit amet</a></li>
-												<li><a href="#">Ornare in hendrerit lectus</a></li>
-												<li><a href="#">Semper mod quis eget dolore</a></li>
-												<li><a href="#">Consequat lorem phasellus</a></li>
-												<li><a href="#">Amet turpis feugiat amet</a></li>
-												<li><a href="#">Semper mod quisturpis nisi</a></li>
+												<li><a href="#">Links to more information about page</a></li>
+												<li><a href="#">Links to more information about page</a></li>
+												<li><a href="#">Links to more information about page</a></li>
+												<li><a href="#">Links to more information about page</a></li>
+												<li><a href="#">Links to more information about page</a></li>
+												<li><a href="#">Links to more information about page</a></li>
 											</ul>
 											<footer>
 												<a href="#" class="button">More Random Links</a>
@@ -91,28 +89,27 @@
 										<article>
 											<header>
 												<h2>Events</h2>
-												<p>Yup. Two sidebars at the same time.</p>
+												<p>Current Event</p>
 											</header>
 
-											<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
+											<span class="image featured"><img src="images/hands.png" alt="" /></span>
 
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-											consequat etiam lorem ipsum dolor sit amet nullam.</p>
-
-											<h3>And Yet Another Subheading</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-											justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-											ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-											rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-											Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-											Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
-
-											<p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
-											quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
-											Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-											Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.</p>
+											<div>
+							<h2>Come To Our New Event</h2>
+							<p> Free In-depth Counselling And Preaching
+							</p>
+						</div>
+						<p>
+							<ul>
+								<li>We help couples and singles overcome the obstcales and problems of the world using teachings and problems of the world using teachings from the bible</li>
+								<li>Give tips on how to face day to day life</li>
+								<li>Preach the undiluted word</li>
+								<li>Set the captives free</li>
+								<li>Lead the people to christ</li>
+							</ul>
+							<p>EVERY WEDNESDAY 12 NOON - 5PM</p>
+							<p>201 MILLWAY AVENUE CONCORD  SUITE 13 UPSTAIRS, ONTARIO, L4K5K8</p>
+						</p>
 										</article>
 
 								</div>
@@ -123,14 +120,14 @@
 									<!-- Sidebar 2 -->
 
 										<section>
-											<h3>Another Subheading</h3>
+											<h3>More Old Events</h3>
 											<ul class="links">
-												<li><a href="#">Amet turpis, feugiat sit amet</a></li>
-												<li><a href="#">Ornare in hendrerit lectus</a></li>
-												<li><a href="#">Semper mod quis eget dolore</a></li>
-												<li><a href="#">Consequat lorem phasellus</a></li>
-												<li><a href="#">Amet turpis feugiat amet</a></li>
-												<li><a href="#">Semper mod quisturpis nisi</a></li>
+												<li><a href="#">Links to more information about page</a></li>
+												<li><a href="#">Links to more information about page</a></li>
+												<li><a href="#">Links to more information about page</a></li>
+												<li><a href="#">Links to more information about page</a></li>
+												<li><a href="#">Links to more information about page</a></li>
+												<li><a href="#">Links to more information about page</a></li>
 											</ul>
 											<footer>
 												<a href="#" class="button">More Random Links</a>
@@ -138,10 +135,8 @@
 										</section>
 
 										<section>
-											<h3>Just a Subheading</h3>
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis et nisi etiam.</p>
+											<h3>Old Event</h3>
+											<p>Description of old event</p>
 											<footer>
 												<a href="#" class="button">Continue Reading</a>
 											</footer>
