--- a/public/management.html
+++ b/public/management.html
@@ -64,27 +64,13 @@
 
 											<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
 
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-											consequat etiam lorem ipsum dolor sit amet nullam.</p>
+											<p> I am speaking the truth in Christ—I am not lying; my conscience bears me witness in the Holy Spirit— that I have great sorrow and unceasing anguish in my heart. For I could wish that I myself were accursed and cut off from Christ for the sake of my brothers, my kinsmen according to the flesh. They are Israelites, and to them belong the adoption, the glory, the covenants, the giving of the law, the worship, and the promises. To them belong the patriarchs, and from their race, according to the flesh, is the Christ, who is God over all, blessed forever. Amen. </p>
 
 											<h3>And Yet Another Subheading</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-											justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-											ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-											vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-											Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-											rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-											Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-											Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
+											<p> But it is not as though the word of God has failed. For not all who are descended from Israel belong to Israel, and not all are children of Abraham because they are his offspring, but “Through Isaac shall your offspring be named.” This means that it is not the children of the flesh who are the children of God, but the children of the promise are counted as offspring. For this is what the promise said: “About this time next year I will return, and Sarah shall have a son.” And not only so, but also when Rebekah had conceived children by one man, our forefather Isaac, though they were not yet born and had done nothing either good or bad—in order that God’s purpose of election might continue, not because of works but because of him who calls— she was told, “The older will serve the younger.” As it is written, “Jacob I loved, but Esau I hated.”.</p>
 
-											<p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
-											quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
-											Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-											fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-											Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-											Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.</p>
+											<p>What shall we say then? Is there injustice on God’s part? By no means! For he says to Moses, “I will have mercy on whom I have mercy, and I will have compassion on whom I have compassion.” So then it depends not on human will or exertion, but on God, who has mercy. For the Scripture says to Pharaoh, “For this very purpose I have raised you up, that I might show my power in you, and that my name might be proclaimed in all the earth.” So then he has mercy on whomever he wills, and he hardens whomever he wills. 
+    You will say to me then, “Why does he still find fault? For who can resist his will?” But who are you, O man, to answer back to God? Will what is molded say to its molder, “Why have you made me like this?” Has the potter no right over the clay, to make out of the same lump one vessel for honorable use and another for dishonorable use? What if God, desiring to show his wrath and to make known his power, has endured with much patience vessels of wrath prepared for destruction, in order to make known the riches of his glory for vessels of mercy, which he has prepared beforehand for glory— even us whom he has called, not from the Jews only but also from the Gentiles? </p>
 										</article>
 
 								</div>
@@ -96,9 +82,7 @@
 
 										<section>
 											<h3>Just a Subheading</h3>
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis et nisi etiam.</p>
+											<p>Extra information on the side</p>
 											<footer>
 												<a href="#" class="button">Continue Reading</a>
 											</footer>
@@ -107,12 +91,12 @@
 										<section>
 											<h3>Another Subheading</h3>
 											<ul class="links">
-												<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-												<li><a href="#">Ornare in hendrerit in lectus</a></li>
-												<li><a href="#">Semper mod quis eget mi dolore</a></li>
-												<li><a href="#">Consequat etiam lorem phasellus</a></li>
-												<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-												<li><a href="#">Semper mod quisturpis nisi</a></li>
+												<li><a href="#">Links to more information about page</a></li>
+												<li><a href="#">Links to more information about page</a></li>
+												<li><a href="#">Links to more information about page</a></li>
+												<li><a href="#">Links to more information about page</a></li>
+												<li><a href="#">Links to more information about page</a></li>
+												<li><a href="#">Links to more information about page</a></li>
 											</ul>
 											<footer>
 												<a href="#" class="button">More Random Links</a>
